# PackScript

./: .gitignore  .todo.md  LICENSE.txt  PackscriptMenu.py  README.md  example.dps  lol.fps  pack.mcmeta  packscript.py  pyproject.toml  settings.json
.github/workflows/: publish.yml
data/example/sources/: example.dps  main.dps
data/lo/sources/: main.dps
data/zlo/sources/: main.dps
hooks/: pre-commit  tests.sh
test/: test.py
test/tests/data/default_template/input_pack/data/test/sources/: main.dps
test/tests/data/default_template/output_pack/data/test/functions/: load.mcfunction  tick.mcfunction
test/tests/data/fps_files/input_pack/: lol.fps
test/tests/data/fps_files/output_pack/: lol.mcfunction
test/tests/data/muliple_dps_and_namespaces/output_pack/data/example/functions/: fibonacci_num_1.mcfunction  fibonacci_num_10.mcfunction  fibonacci_num_2.mcfunction  fibonacci_num_3.mcfunction  fibonacci_num_4.mcfunction  fibonacci_num_5.mcfunction  fibonacci_num_6.mcfunction  fibonacci_num_7.mcfunction  fibonacci_num_8.mcfunction  fibonacci_num_9.mcfunction  say_stuff.mcfunction  tick.mcfunction
test/tests/data/muliple_dps_and_namespaces/output_pack/data/zlo/functions/: load.mcfunction  tick.mcfunction
test/tests/data/nested_folder/output_pack/: pack.mcmeta
test/tests/data/nested_source/output_pack/: pack.mcmeta
test/tests/data/overlay/input_pack/: pack.mcmeta
test/tests/data/overlay/output_pack/: pack.mcmeta
test/tests/data/semicolon_func/input_pack/: pack.mcmeta
test/tests/data/sub_function/output_pack/: pack.mcmeta
(+29 files in other folders)
